# rust-ceramic

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  UPGRADE.md  cliff.toml  cspell.json  dev.yaml  kubo-rpc-server.patch  release.toml  sqitch.conf  test.db  testcase.txt
actor/: Cargo.toml
actor-macros/: Cargo.toml
actor-macros/src/: lib.rs
actor/examples/game/: main.rs
actor/src/: lib.rs  macros.rs
anchor/: Cargo.toml
anchor-evm/: Cargo.toml  README.md
anchor-evm/src/: contract.rs  evm_transaction_manager.rs  gnosis_test.rs  integration_test.rs  lib.rs  proof_builder.rs
anchor-hoku/: Cargo.toml
anchor-hoku/src/: hoku_rpc.rs  lib.rs
anchor-remote/: Cargo.toml
anchor-remote/src/: cas_remote.rs  lib.rs
anchor-remote/src/test-data/: anchor_response.test.txt  create_anchor_request_on_cas.test.txt  test_anchor_batch_with_cas.test.txt  time_event_blocks.test.txt
anchor-service/: Cargo.toml
anchor-service/src/: anchor.rs  anchor_batch.rs  cas_mock.rs  high_water_mark_store.rs  lib.rs  merkle_tree.rs  service.rs  state_machine.rs  time_event.rs  transaction_manager.rs
anchor-service/src/test-data/: test_anchor_batch.test.txt  test_anchor_batch_with_0_requests.test.txt  test_anchor_batch_with_10_requests.test.txt  test_anchor_batch_with_1_request.test.txt  test_anchor_batch_with_cas.test.txt  test_anchor_batch_with_less_than_pow2_requests.test.txt  test_anchor_batch_with_more_than_pow2_requests.test.txt  test_anchor_batch_with_pow2_requests.test.txt  test_anchor_service_run.txt  test_anchor_service_run_1.txt  time-event-blocks.test.txt
anchor-tree/: Cargo.toml
anchor-tree/src/: block_builder.rs  lib.rs  merkle_tree.rs  mmr.rs  utils.rs
anchor-tx/: Cargo.toml
anchor-tx/src/: cas_mock.rs  cas_remote.rs  lib.rs  remote_cas.rs  transaction_manager.rs
anchor-tx/src/test-data/: anchor-response.test.txt  anchor_response.json  anchor_response.test.txt  create_anchor_request_on_cas.test.txt  test_anchor_batch.test.txt  test_anchor_batch_with_cas.test.txt
anchor/src/: committer.rs  lib.rs  verify.rs
anchor/src/impl/: mod.rs
api/: Cargo.toml  ceramic.yaml  release.toml
api/src/: auth.rs  lib.rs  metrics.rs  resume_token.rs  server.rs  test.rs  tests.rs
api/src/metrics/: api.rs
api/src/server/: event.rs
arrow-test/: Cargo.toml
arrow-test/src/: lib.rs
car/: Cargo.toml
car/src/: error.rs  header.rs  lib.rs  util.rs
car/src/sync/: mod.rs  reader.rs  util.rs  writer.rs
car/tests/: car_file_test.rs  sync_car_file_test.rs
cas/: Cargo.toml
cas/src/: block_builder.rs  lib.rs  merkle_tree.rs  state_machine.rs  transaction_manager.rs
ceramic-kubo-rpc/: Cargo.toml
ceramic-kubo-rpc/src/: dag.rs  error.rs  http.rs  lib.rs  pin.rs  rocket.rs  swarm.rs  tide.rs
ceramic-kubo-rpc/src/http/: block.rs  dag.rs  id.rs  mod.rs  pin.rs  pubsub.rs  swarm.rs
ceramic-one/: Cargo.toml
ceramic-one/src/: main.rs  metrics.rs  pubsub.rs
core/: Cargo.toml
core/src/: block.rs  bytes.rs  deserialize_ext.rs  event_id.rs  interest.rs  jwk.rs  jws.rs  key.rs  lib.rs  network.rs  node_id.rs  peer.rs  range.rs  serde_ipld.rs  serialize_ext.rs  signer.rs  sql.rs  stream_id.rs
event/: Cargo.toml
event-svc/: Cargo.toml  model_error_counts.csv
event-svc/benches/: sqlite_store.rs
event-svc/src/: error.rs  lib.rs
event-svc/src/blockchain/: mod.rs
event-svc/src/event/: feed.rs  migration.rs  mod.rs  order_events.rs  ordering_task.rs  service.rs  store.rs
event-svc/src/store/: metrics.rs  mod.rs
event-svc/src/tests/: event.rs  migration.rs  mod.rs  ordering.rs  self_anchor.rs
event/src/: anchor.rs  args.rs  bytes.rs  bytes_or_string.rs  deterministic_event.rs  deterministic_init_event.rs  event.rs  lib.rs  signed_event.rs  unvalidated.rs  value.rs
event/src/unvalidated/: builder.rs  bytes.rs  event.rs  mod.rs  signed.rs  value.rs
event/src/validated/: event.rs  mod.rs  validator.rs
flight/: Cargo.toml  cargo.toml
flight/src/: conversion.rs  lib.rs  server.rs  tests.rs  types.rs
flight/tests/: server.rs
http-client/: Cargo.toml
http-client/src/: api.rs  lib.rs  model_definition.rs
interest-svc/: Cargo.toml
interest-svc/src/: lib.rs
interest-svc/src/interest/: mod.rs  service.rs  store.rs
interest-svc/src/store/: metrics.rs  mod.rs
interest-svc/src/tests/: interest.rs  mod.rs
kubo-rpc/: Cargo.toml  kubo-rpc.yaml  release.toml
kubo-rpc/src/: block.rs  dag.rs  error.rs  http.rs  id.rs  ipfs_metrics.rs  lib.rs  pin.rs  pubsub.rs  swarm.rs  version.rs
kubo-rpc/src/http/: block.rs  dag.rs  id.rs  metrics.rs  mod.rs  pin.rs  pubsub.rs  stream_drop.rs  swarm.rs  version.rs
macro-ipld-derive/: Cargo.toml
macro-ipld-derive/src/: lib.rs
metadata/: Cargo.toml  build.rs
metadata/src/: lib.rs
metrics/: Cargo.toml
metrics/src/: config.rs  core.rs  lib.rs  macros.rs  p2p.rs
olap/: Cargo.toml
olap/src/: aggregator.rs  lib.rs  main.rs  metrics.rs
olap/src/aggregator/: ceramic_car.rs  ceramic_patch.rs  mod.rs  string.rs
one/: Cargo.toml
one/src/: # pip install multiformats.py  cbor_value.rs  daemon.rs  ethereum_rpc.rs  events.rs  feature_flags.rs  http.rs  http_metrics.rs  ipfs.rs  lib.rs  main.rs  metrics.rs  migrations.rs  network.rs  paths.rs  query.rs  recon_car_block_store.rs  recon_loop.rs  sql.rs  startup.rs
p2p/: Cargo.toml
p2p/benches/: lru_cache.rs
p2p/src/: behaviour.rs  config.rs  keys.rs  lib.rs  metrics.rs  node.rs  peers.rs  providers.rs  publisher.rs  rpc.rs  sqliteblockstore.rs  swarm.rs
p2p/src/behaviour/: ceramic_peer_manager.rs  event.rs  peer_manager.rs
p2p/tests/: node.rs
pipeline/: Cargo.toml  DESIGN.md  QUERYING.md
pipeline/src/: cache_table.rs  cid_part.rs  cid_string.rs  config.rs  dimension_extract.rs  lib.rs  macros.rs  metrics.rs  schemas.rs  stream.rs  stream_id_string.rs  stream_id_to_cid.rs  tests.rs
pipeline/src/aggregator/: ceramic_patch.rs  dict_or_array.rs  metrics.rs  mock.rs  mod.rs  model_instance_patch.rs  model_instance_validate.rs  model_patch.rs  model_validate.rs  result.rs
(+963 files in other folders)
