[workspace]
resolver = "2"
members = [
    "api",
    "api-server",
    "core",
    "event",
    "kubo-rpc",
    "metadata",
    "one",
    "p2p",
    "recon",
]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
asynchronous-codec = "0.6"
bytes = "1.1"
ceramic-api = { path = "./api" }
ceramic-api-server = { path = "./api-server" }
ceramic-core = { path = "./core" }
ceramic-metadata = { path = "./metadata" }
ceramic-one = { path = "./one" }
ceramic-p2p = { path = "./p2p" }
cid = { version = "0.9", features = ["serde-codec"] }
config = "0.13.1"
criterion = "0.4"
dag-jose = "0.1"
expect-test = "1"
futures = "0.3"
futures-util = "0.3"
git-version = "0.3.5"
hex = "0.4.3"
iroh-bitswap = { git = "https://github.com/3box/beetle", branch = "main" }
iroh-car = { git = "https://github.com/3box/beetle", branch = "main" }
iroh-metrics = { git = "https://github.com/3box/beetle", branch = "main" }
iroh-rpc-client = { git = "https://github.com/3box/beetle", branch = "main" }
iroh-rpc-types = { git = "https://github.com/3box/beetle", branch = "main" }
iroh-store = { git = "https://github.com/3box/beetle", branch = "main" }
iroh-util = { git = "https://github.com/3box/beetle", branch = "main" }
lazy_static = "1.4"
libipld = "0.15" # use same version as Iroh
libp2p = { version = "0.51", default-features = false } # use same version as Iroh
libp2p-identity = { version = "0.1.2", features = ["peerid", "ed25519"] }
libp2p-tls = { version = "0.1.0", default-features = false } # use explicit version of dep to avoid conflict
lru = "0.10"
minicbor = { version = "0.19.1", features = ["alloc", "std"] }
multiaddr = "0.17" # use same version as Iroh
multibase = "0.9"
multihash = "0.17"
names = { version = "0.14.0", default-features = false }
once_cell = "1.17.1"
opentelemetry = "0.18"
opentelemetry-otlp = "0.11"
rand = "0.8.5"
rand_chacha = "0.3.1"
recon = { path = "./recon/" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.3"
serde_json = "1.0"
smallvec = "1.10"
ssh-key = { version = "0.5.1", default-features = false }
ssi = { version = "0.6", features = ["ed25519"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tempfile = "3.3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
    "sync",
] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.8", default-features = false, features = ["compat"] }
toml = "0.5.9"
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = { version = "0.2" }
unimock = "0.4"
unsigned-varint = "0.7"
void = "1.0"
zeroize = "1.4"

# Uncomment these lines to use a local copy of beetle
#[patch."https://github.com/nathanielc/beetle"]
#iroh-bitswap = { path = "../beetle/iroh-bitswap" }
#iroh-metrics = { path = "../beetle/iroh-metrics" }
#iroh-rpc-client = { path = "../beetle/iroh-rpc-client" }
#iroh-rpc-types = { path = "../beetle/iroh-rpc-types" }
#iroh-store = { path = "../beetle/iroh-store" }
#iroh-util = { path = "../beetle/iroh-util" }


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Danny Browning <dbrowning@3box.io>",
    "Nathaniel Cook <nvcook42@gmail.com>",
    "Aaron D Goldman <goldmanaaron@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/3box/rust-ceramic"
