[workspace]
resolver = "2"
members = [
    "api",
    "api-server",
    "core",
    "event",
    "kubo-rpc",
    "metadata",
    "kubo-rpc-server",
    "one",
    "p2p",
    "recon",
    "beetle/iroh-bitswap",
    "beetle/iroh-car",
    "beetle/iroh-metrics",
    "beetle/iroh-rpc-client",
    "beetle/iroh-rpc-types",
    "beetle/iroh-store",
    "beetle/iroh-util",
]

[workspace.dependencies]
# We prefer to place all dependencies for our workspace crates here.
# The should be added here with default features only so that each
# crate explicitly enables the features they need.
#
# There are two execeptions to this:
# - If a crate needs a dependency with `default-features=false` the
#   default features must be disabled here.
# - If we really want to uniformely enforce a feature in all crates,
#   e.g. anyhow's backtrace feature.

ahash = "0.8"
anyhow = { version = "1", features = ["backtrace"] }
async-broadcast = "0.4.1"
async-channel = "1.7.1"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
asynchronous-codec = "0.6"
axum = "0.6"
backoff = "0.4"
base64 = "0.20.0"
bincode = "1.3.3"
bs58 = "0.4"
bytecheck = "0.6.7"
bytes = "1.1"
bytesize = "1.1"
ceramic-api = { path = "./api" }
ceramic-api-server = { path = "./api-server" }
ceramic-core = { path = "./core" }
ceramic-kubo-rpc-server = { path = "./kubo-rpc-server" }
ceramic-metadata = { path = "./metadata" }
ceramic-one = { path = "./one" }
ceramic-p2p = { path = "./p2p" }
cid = { version = "0.9", features = ["serde-codec"] }
clap = { version = "4", features = ["derive", "env"] }
clap_mangen = "0.2.2"
config = "0.13.1"
console = { version = "0.15", default-features = false }
console-subscriber = "0.1.7"
criterion = "0.4"
crossterm = "0.25"
ctrlc = "3.2.2"
dag-jose = "0.1"
deadqueue = "0.2.3"
derivative = "2.2"
derive_more = "0.99.17"
dirs-next = "2"
expect-test = "1.4.1"
fastmurmur3 = "0.1.2"
fnv = "1.0.7"
futures = "0.3"
futures-util = "0.3"
git-version = "0.3.5"
handlebars = "4"
headers = "0.3.7"
hex = "0.4.3"
hex-literal = "0.3.4"
http = "0.2"
http-body = "0.4.5"
http-serde = "1.1"
humansize = "2"
hyper = { version = "0.14", features = ["full"] }
ignore = "0.4.18"
indicatif = "0.17.1"
integer-encoding = "3.0"
iroh-bitswap = { path = "./beetle/iroh-bitswap" }
iroh-car = { path = "./beetle/iroh-car" }
iroh-metrics = { path = "./beetle/iroh-metrics" }
iroh-p2p = { version = "0.2.0", path = "./beetle/iroh-p2p" }
iroh-rpc-client = { path = "./beetle/iroh-rpc-client" }
iroh-rpc-types = { path = "./beetle/iroh-rpc-types" }
iroh-store = { path = "./beetle/iroh-store" }
iroh-util = { path = "./beetle/iroh-util" }
keyed_priority_queue = "0.4.1"
lazy_static = "1.4"
libipld = "0.15"
libp2p = { version = "0.51", default-features = false }
libp2p-identity = { version = "0.1.2", features = ["peerid", "ed25519"] }
libp2p-tls = { version = "0.1.0", default-features = false } # use explicit version of dep to avoid conflict
lru = "0.10"
mime = "0.3"
mime_classifier = "0.0.1"
mime_guess = "2.0.4"
minicbor = { version = "0.19.1", features = ["alloc", "std"] }
mockall = "0.11.4"
multiaddr = "0.17" # use same version as Iroh
multibase = "0.9"
multihash = "0.17"
names = { version = "0.14.0", default-features = false }
nix = "0.26"
num_enum = "0.5.7"
once_cell = "1.17.1"
opentelemetry = "0.18"
opentelemetry-otlp = "0.11"
par-stream = { version = "0.10.2", default-features = false }
paste = "1.0.9"
phf = "0.11"
prometheus-client = "0.19"
proptest = "1"
prost = "0.11"
prost-build = "0.11.1"
quic-rpc = { version = "0.3.2", default-features = false }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
recon = { path = "./recon/" }
relative-path = "1.7.2"
reqwest = { version = "0.11.10", default-features = false }
rkyv = "0.7.37"
rlimit = "0.9.0"
rocksdb = "0.21"
ruzstd = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-error = "0.1.2"
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.3"
serde_json = "1.0.87"
serde_qs = "0.10.1"
serde_with = "2.1"
sha2 = { version = "0.10", default-features = false }
smallvec = "1.10"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
ssh-key = { version = "0.5.1", default-features = false }
ssi = { version = "0.7", features = ["ed25519"] }
swagger = { version = "6.1", features = [
    "serdejson",
    "server",
    "client",
    "tls",
    "tcp",
] }
sysinfo = "0.27.2"
temp-env = "0.3.1"
tempfile = "3.3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
testdir = "0.7.0"
thiserror = "1"
time = "0.3.9"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
    "sync",
] }
tokio-context = "0.1.3"
tokio-stream = "0.1.11"
tokio-test = "0.4.2"
tokio-util = { version = "0.7.8", default-features = false, features = [
    "compat",
] }
toml = "0.5.9"
tower = "0.4"
tower-http = "0.3"
tower-layer = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = { version = "0.2" }
trust-dns-resolver = "0.22.0"
unsigned-varint = "0.7"
url = "2.2.2"
urlencoding = "2.1"
void = "1.0"
wasm-timer = "0.2.5"
which = "4.3.0"
xtaskops = "0.3"
zeroize = "1.4"

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = [
    "Danny Browning <dbrowning@3box.io>",
    "Nathaniel Cook <nvcook42@gmail.com>",
    "Aaron D Goldman <goldmanaaron@gmail.com>",
]
license = "Apache-2.0/MIT"
repository = "https://github.com/3box/rust-ceramic"
rust-version = "1.65"
