[workspace]
resolver = "2"
members = [
    "actor",
    "actor-macros",
    "anchor-remote",
    "anchor-service",
    "api",
    "api-server",
    "core",
    "event",
    "event-svc",
    "flight",
    "interest-svc",
    "kubo-rpc",
    "kubo-rpc-server",
    "metadata",
    "metrics",
    "one",
    "p2p",
    "peer-svc",
    "pipeline",
    "recon",
    "shutdown",
    "sql",
    "validation",
    "beetle/iroh-bitswap",
    "beetle/iroh-rpc-client",
    "beetle/iroh-rpc-types",
    "beetle/iroh-util",
]

[workspace.dependencies]
# We prefer to place all dependencies for our workspace crates here.
# The should be added here with default features only so that each
# crate explicitly enables the features they need.
#
# There are two execeptions to this:
# - If a crate needs a dependency with `default-features=false` the
#   default features must be disabled here.
# - If we really want to uniformely enforce a feature in all crates,
#   e.g. anyhow's backtrace feature.

ahash = "0.8"
alloy = { version = "0.4", features = ["k256", "provider-http", "rpc-types"] }
anyhow = { version = "1" }
arrow = { version = "54", features = ["prettyprint"] }
arrow-array = "54"
arrow-cast = "54"
arrow-flight = { version = "54", features = ["flight-sql-experimental"] }
arrow-ipc = "54"
arrow-schema = "54"
async-broadcast = "0.4.1"
async-channel = "1.7.1"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
asynchronous-codec = "0.7"
axum = "0.6"
backoff = "0.4"
base64 = "0.21"
bincode = "1.3.3"
bs58 = "0.4"
bytecheck = "0.6.7"
bytes = "1.1"
bytesize = "1.1"
ceramic-actor = { path = "./actor" }
ceramic-actor-macros = { path = "./actor-macros" }
ceramic-anchor-service = { path = "./anchor-service" }
ceramic-anchor-remote = { path = "./anchor-remote" }
ceramic-api = { path = "./api" }
ceramic-api-server = { path = "./api-server", default-features = false }
ceramic-car = { path = "./car" }
ceramic-core = { path = "./core" }
ceramic-event = { path = "./event" }
ceramic-event-svc = { path = "./event-svc" }
ceramic-flight = { path = "./flight" }
ceramic-interest-svc = { path = "./interest-svc" }
ceramic-kubo-rpc-server = { path = "./kubo-rpc-server" }
ceramic-metadata = { path = "./metadata" }
ceramic-metrics = { path = "./metrics" }
ceramic-one = { path = "./one" }
ceramic-p2p = { path = "./p2p" }
ceramic-peer-svc = { path = "./peer-svc" }
ceramic-pipeline = { path = "./pipeline" }
ceramic-sql = { path = "./sql" }
ceramic-validation = { path = "./validation" }
chrono = "0.4.31"
cid = { version = "0.11", features = ["serde-codec"] }
clap = { version = "4", features = ["derive", "env", "string"] }
clap_mangen = "0.2.2"
console = { version = "0.15", default-features = false }
console-subscriber = "0.4"
criterion2 = "0.7.0"
crossterm = "0.25"
ctrlc = "3.2.2"
dag-jose = "0.2"
datafusion = "45"
datafusion-flight-sql-server = { git = "https://github.com/datafusion-contrib/datafusion-flight-sql-server.git", branch = "main" }
deadqueue = "0.2.3"
derivative = "2.2"
derive_more = "0.99.17"
dirs-next = "2"
ed25519-dalek = "2.1"
expect-test = "1.4.1"
fastmurmur3 = "0.1.2"
fnv = "1.0.7"
futures = "0.3"
futures-timer = "3.0.2"
futures-util = "0.3"
git-version = "0.3.5"
handlebars = "4"
headers = "0.3.7"
hex = "0.4.3"
hex-literal = "0.3.4"
http = "1"
http-body = "0.4.5"
http-serde = "1.1"
humansize = "2"
hyper = { version = "0.14", features = ["full"] }
ignore = "0.4.18"
indexmap = "2.3.0"
indicatif = "0.17.1"
int-enum = "0.5.0"
integer-encoding = "3.0"
ipld-core = "0.4"
ipld-dagpb = "0.2"
iroh-bitswap = { path = "./beetle/iroh-bitswap" }
iroh-p2p = { version = "0.2.0", path = "./beetle/iroh-p2p" }
iroh-rpc-client = { path = "./beetle/iroh-rpc-client" }
iroh-rpc-types = { path = "./beetle/iroh-rpc-types" }
iroh-util = { path = "./beetle/iroh-util" }
itertools = "0.13.0"
jsonschema = "0.28.3"
k256 = "0.13"
keyed_priority_queue = "0.4.1"
lazy_static = "1.4"
libp2p = { version = "0.53", default-features = false }
libp2p-identity = { version = "0.2", features = ["peerid", "ed25519"] }
lru = "0.10"
mime = "0.3"
mime_classifier = "0.0.1"
mime_guess = "2.0.4"
minicbor = { version = "0.19.1", features = ["std", "derive", "half"] }
mockall = "0.11.4"
multiaddr = "0.18"
multibase = "0.9"
multihash = { version = "0.19" }
multihash-codetable = { version = "0.1", features = ["sha2", "sha3"] }
multihash-derive = { version = "0.9" }
names = { version = "0.14.0", default-features = false }
nix = "0.26"
num_enum = "0.5.7"
object_store = { version = "0.11", features = ["aws"] }
once_cell = "1.17.1"
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"
opentelemetry_sdk = "0.22"
p256 = "0.13"
par-stream = { version = "0.10.2", default-features = false }
paste = "1.0.9"
phf = "0.11"
prometheus-client = "0.22"
proptest = "1"
prost = "0.13"
prost-build = "0.13"
quic-rpc = { version = "0.3.2", default-features = false }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
recon = { path = "./recon/" }
regex = "1.7.1"
relative-path = "1.7.2"
reqwest = { version = "0.11.10", default-features = false }
ring = "0.17.8"
rkyv = "0.7.37"
rlimit = "0.9.0"
ruzstd = "0.3"
# TODO: Update to 1.0 stable once its released.
schemars = "1.0.0-alpha.17"
serde = { version = "1.0", features = ["derive"] }
serde-error = "0.1.2"
serde_bytes = "0.11"
serde_cbor = "0.11.2"
serde_ipld_dagcbor = "0.6"
serde_ipld_dagjson = "0.2"
serde_json = "1.0.87"
serde_qs = "0.10.1"
serde_with = "2.1"
sha2 = { version = "0.10", default-features = false }
sha3 = "0.10"
shutdown = { path = "./shutdown/" }
smallvec = "1.10"
snafu = "0.8.5"
# pragma optimize hangs forver on 0.8, possibly due to libsqlite-sys upgrade
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
ssh-key = { version = "0.5.1", default-features = false, features = [
    "std",
    "rand_core",
] }
ssi = { version = "0.7", features = ["ed25519"] }
swagger = { version = "6.1", features = [
    "serdejson",
    "server",
    "client",
    "tls",
    "tcp",
] }
sysinfo = "0.27.2"
temp-env = "0.3.1"
tempfile = "3.3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
testdir = "0.7.0"
thiserror = "1"
tikv-jemallocator = { version = "0.5", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
tikv-jemalloc-ctl = "0.5"
time = "0.3.9"
tmpdir = "1.0.0"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
    "sync",
] }
tokio-context = "0.1.3"
tokio-stream = "0.1.11"
tokio-test = "0.4.2"
tokio-util = { version = "0.7.10", features = ["compat", "rt"] }
toml = "0.5.9"
tonic = { version = "0.12", features = ["tls"] }
tower = "0.4"
tower-http = "0.3"
tower-layer = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = [
    "ansi",
    "env-filter",
    "json",
] }
trust-dns-resolver = "0.22.0"
unsigned-varint = "0.8"
url = "2.2.2"
urlencoding = "2.1"
uuid = { version = "1.8.0", features = ["v4"] }
void = "1.0"
wasm-timer = "0.2.5"
which = "4.3.0"
xtaskops = "0.3"
zeroize = "1.4"


[workspace.package]
version = "0.56.2"
edition = "2021"
authors = [
    "Danny Browning <dbrowning@3box.io>",
    "Nathaniel Cook <nvcook42@gmail.com>",
    "Aaron D Goldman <goldmanaaron@gmail.com>",
    "Mohsin Zaidi <@smrz2001>",
    "David Estes <@dav1do>",
    "Spencer T Brody <@stbrody>",
]
license = "Apache-2.0/MIT"
repository = "https://github.com/3box/rust-ceramic"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
