[package]
name = "ceramic-actor-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"

[dev-dependencies]
ceramic-actor.workspace = true
ceramic-metrics.workspace = true
async-trait.workspace = true
tokio.workspace = true
