[package]
name = "ceramic-actor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
ceramic-actor-macros.workspace = true
snafu.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tracing-subscriber.workspace = true
shutdown.workspace = true
