[package]
name = "ceramic-anchor-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
ceramic-car.workspace = true
ceramic-core.workspace = true
ceramic-event.workspace = true
ceramic-anchor-service.workspace = true
chrono.workspace = true
expect-test.workspace = true
futures.workspace = true
hex.workspace = true
multihash-codetable.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
test-network = []
