[package]
name = "ceramic-anchor-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ceramic-anchor-tx.workspace = true
ceramic-core.workspace = true
ceramic-event.workspace = true
cid.workspace = true
expect-test.workspace = true
indexmap = "2.3.0"
multihash-codetable.workspace = true
ring.workspace = true
serde_ipld_dagcbor.workspace = true
tokio.workspace = true
