[package]
name = "ceramic-anchor-tx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
base64.workspace = true
ceramic-core.workspace = true
chrono.workspace = true
cid.workspace = true
expect-test.workspace = true
hex.workspace = true
multihash-codetable.workspace = true
multibase.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
reqwest.workspace = true
ring.workspace = true
tokio.workspace = true
uuid.workspace = true
iroh-car.workspace = true
futures.workspace = true
