[package]
name = "anchor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true, features = ["contract", "json-rpc", "network", "provider-http", "providers", "rpc", "rpc-types", "rpc-types-eth", "serde", "sol-types", "reqwest"] }
alloy-contract.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ceramic-event.workspace = true
iroh-car.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["io-util"] }
time = { workspace = true, features = ["serde"] }
uuid.workspace = true
url = { workspace = true, features = ["serde"] }
log = "0.4.21"

[dev-dependencies]
did-method-key.workspace = true
hex.workspace = true
serde_json.workspace = true
wiremock.workspace = true
