[package]
name = "ceramic-api"
description = "implementation of the Ceramic API server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ceramic-api-server.workspace = true
ceramic-core.workspace = true
ceramic-event.workspace = true
ceramic-metadata.workspace = true
ceramic-metrics.workspace = true
cid.workspace = true
futures.workspace = true
ipld-core.workspace = true
iroh-car.workspace = true
multibase.workspace = true
recon.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
swagger.workspace = true
tokio.workspace = true
tracing.workspace = true
prometheus-client.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
jemalloc_pprof = "0.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl.workspace = true

[dev-dependencies]
expect-test.workspace = true
tracing-test.workspace = true
mockall.workspace = true
