[package]
name = "ceramic-api"
description = "implementation of the Ceramic API server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
biscuit-auth.workspace = true
ceramic-api-server.workspace = true
ceramic-core.workspace = true
ceramic-event.workspace = true
ceramic-metadata.workspace = true
chrono.workspace = true
did-method-key.workspace = true
did-pkh.workspace = true
futures.workspace = true
ipld-core.workspace = true
iroh-car.workspace = true
multibase.workspace = true
once_cell.workspace = true
recon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_ipld_dagcbor.workspace = true
ssi.workspace = true
ssi-dids.workspace = true
swagger.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
jemalloc_pprof = "0.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-log.workspace = true
mockall.workspace = true
