[package]
name = "ceramic-api"
description = "implementation of the Ceramic API server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ceramic-api-server.workspace = true
ceramic-core.workspace = true
ceramic-event.workspace = true
ceramic-metadata.workspace = true
ceramic-pipeline.workspace = true
datafusion.workspace = true
futures.workspace = true
ipld-core.workspace = true
ceramic-car.workspace = true
multibase.workspace = true
multiaddr.workspace = true
recon.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
swagger.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
jemalloc_pprof = "0.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-log.workspace = true
mockall.workspace = true
object_store.workspace = true
