[package]
name = "ceramic-car"
authors = [
    "dignifiedquire <me@dignifiedquire.com>",
    "Nathaniel Cook <nvcook42@gmail.com>",
]
description = "Car V1 reading and writing API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cid.workspace = true
integer-encoding = { workspace = true, features = ["tokio_async"] }
futures.workspace = true
serde_ipld_dagcbor.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
multihash.workspace = true
multihash-codetable.workspace = true
ipld-core.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "rt",
    "fs",
    "io-util",
] }
