[package]
name = "ceramic-kubo-rpc"
description = "Provides an http service that maps Kubo RPC calls to Iroh RPC calls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
http = ["dep:actix-web", "dep:actix-multipart", "dep:tracing-actix-web"]

[dependencies]
actix-multipart ={ version =  "0.5", optional = true }
actix-web =  { version = "4.3", optional = true }
anyhow.workspace = true
async-trait = "0.1"
futures-util.workspace = true
iroh-api.workspace = true
iroh-embed.workspace = true
iroh-rpc-client.workspace = true
libipld.workspace = true
libp2p.workspace =  true
multiaddr.workspace = true
serde = {version = "1", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tracing-actix-web =  { version = "0.7.2", optional = true }
tracing-opentelemetry.workspace = true
tracing.workspace = true
unimock = "0.4.9"
hex = "0.4.3"
expect-test = "1.4.1"
