[package]
name = "ceramic-kubo-rpc"
description = "Provides an http service that maps Kubo RPC calls to Iroh RPC calls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
http = [
    "dep:actix-http",
    "dep:actix-multipart",
    "dep:actix-multipart-rfc7578",
    "dep:actix-web",
    "dep:serde",
    "dep:serde_json",
    "dep:tracing-actix-web",
]

[dependencies]
actix-http = { version = "3", optional = true }
actix-multipart = { version = "0.5", optional = true }
actix-multipart-rfc7578 = { version = "0.10", optional = true }
actix-web = { version = "4", optional = true }
async-stream.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dag-jose.workspace = true
futures-util.workspace = true
iroh-api.workspace = true
iroh-embed.workspace = true
iroh-rpc-client.workspace = true
libipld.workspace = true
libp2p.workspace = true
multiaddr.workspace = true
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "1"
tracing-actix-web = { version = "0.7", optional = true }
tracing-opentelemetry.workspace = true
tracing.workspace = true
unimock.workspace = true
hex = "0.4"

[dev-dependencies]
expect-test = "1"
hex = "0.4"
