[package]
name = "ceramic-one"
description = "Single binary Ceramic node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
ceramic-kubo-rpc = { path = "../ceramic-kubo-rpc", features = ["http"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util.workspace = true
git-version = "0.3"
home = "0.5"
iroh-api.workspace = true
iroh-embed.workspace = true
iroh-metrics.workspace = true
libp2p.workspace = true
multiaddr.workspace = true
names = "0.14"
opentelemetry-otlp.workspace = true
opentelemetry.workspace = true
prometheus-client = "0.18"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
expect-test = "1"
