[package]
name = "ceramic-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.21.2"
cid.workspace = true
#did-method-key = "0.2.1"
did-method-key = { git = "https://github.com/dbcfd/ssi", branch = "feat/wasi" }
#did-method-key = { path = "/Users/dbrowning/code/oss/ssi/did-key" }
#did-pkh = "0.2.1"
did-pkh = { git = "https://github.com/dbcfd/ssi", branch = "feat/wasi" }
#did-pkh = { path = "/Users/dbrowning/code/oss/ssi/did-pkh" }
hex.workspace = true
int-enum = "0.5.0"
libp2p-identity.workspace = true
minicbor.workspace = true
multibase.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
ssi.workspace = true
unsigned-varint.workspace = true

[target.'cfg(not(all(target_arch = "wasm32", target_os = "wasi")))'.dependencies]
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
expect-test.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Used in a macro invocation to serialize a type
    "serde_bytes",
]
