[package]
name = "ceramic-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64 = "0.21.2"
cid.workspace = true
did-method-key = "0.2.1"
did-pkh = "0.2.1"
hex.workspace = true
int-enum = "0.5.0"
libp2p-identity.workspace = true
minicbor.workspace = true
multibase.workspace = true
multihash-codetable.workspace = true
multihash-derive.workspace = true
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
ring.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_ipld_dagcbor.workspace = true
serde_ipld_dagjson.workspace = true
serde_json.workspace = true
ssh-key.workspace = true
ssi.workspace = true
unsigned-varint.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
expect-test.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Used in a macro invocation to serialize a type
    "serde_bytes",
]
