[package]
name = "ceramic-event-svc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
ceramic-api.workspace = true
ceramic-car.workspace = true
ceramic-core.workspace = true
ceramic-event.workspace = true
ceramic-metrics.workspace = true
ceramic-sql.workspace = true
ceramic-flight.workspace = true
cid.workspace = true
futures.workspace = true
hex.workspace = true
ipld-core.workspace = true
iroh-bitswap.workspace = true
itertools.workspace = true
multihash-codetable.workspace = true
multihash-derive.workspace = true
multihash.workspace = true
prometheus-client.workspace = true
recon.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
ceramic-event.workspace = true
criterion2 = { workspace = true, features = ["async", "async_tokio"] }
expect-test.workspace = true
ipld-core.workspace = true
multibase.workspace = true
paste = "1.0"
rand.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
test-log.workspace = true
tmpdir.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[[bench]]
name = "sqlite_store"
harness = false
